@@ -358,7 +358,7 @@
 					<div class = "row w-100">
 						<div class="col-sm-12 col-lg-8 mb-1 text-left">
 <?php if ($table_row["project_status"]=== "1"): ?>
-										<h1><a href = '<?=$table_row["project_home_link"] ?>'><?=$table_row["project_name"] ?></a></h1>
+										<h1><a href = '<?=$table_row["project_home_link"] ?>'><?=$table_row["project_name"] ?> <i class = 'h5 fas fa-home'></i></a></h1>
 <?php else: ?>
 										<h1><?=$table_row["project_name"] ?></h1>
 <?php endif; ?>
@@ -366,17 +366,17 @@
 								</div>
 						</div>
 						<div class="col-sm-12 col-lg-4 mb-1 text-right">
-										<h1 class = "textblau"><font size = "1">Gesamt:</font> <?=number_format($table_row["total_credits"],0,$dec_point,$thousands_sep) ?></h1>
+										<h1 class = "textblau"><font size = "1"><?=$text_total?>:</font> <?=number_format($table_row["total_credits"],0,$dec_point,$thousands_sep) ?></h1>
 										<div class = "text-sm"><?=$table_row["proz_anteil"] ?><?=$text_proz_anteil?></div>
 <?php if ($table_row["project_status"] === "1"): ?>
-										<div class = "h3 textgruen"><font size = "1">heute:</font> <?=number_format($table_row["sum_today"],0,$dec_point,$thousands_sep) ?></div>
+										<div class = "h3 textgruen"><font size = "1"><?=$tr_tb_to?>:</font> <?=number_format($table_row["sum_today"],0,$dec_point,$thousands_sep) ?></div>
 										<div class = "text-sm text-muted"><font size = "1">-1h:</font> <?=number_format($table_row["sum1h"],0,$dec_point,$thousands_sep) ?></div>
 										<div class = "text-sm text-muted"><font size = "1">-2h:</font> <?=number_format($table_row["sum2h"],0,$dec_point,$thousands_sep) ?></div>
 										<div class = "text-sm text-muted"><font size = "1">-6h:</font> <?=number_format($table_row["sum6h"],0,$dec_point,$thousands_sep) ?></div>
 										<div class = "text-sm text-muted"><font size = "1">-12h:</font> <?=number_format($table_row["sum12h"],0,$dec_point,$thousands_sep) ?></div>
-										<div class = "h4 textgelb"><font size = "1">gestern:</font> <?=number_format($table_row["sum_yesterday"],0,$dec_point,$thousands_sep) ?></div>
+										<div class = "h4 textgelb"><font size = "1"><?=$tr_tb_ye?>:</font> <?=number_format($table_row["sum_yesterday"],0,$dec_point,$thousands_sep) ?></div>
 <?php if ($hasPendings): ?>
-										<div class = "text-sm textrot"><font size = "1">Pendings:</font> <?=number_format($table_row["pending_credits"],0,$dec_point,$thousands_sep) ?></div>
+										<div class = "text-sm textrot"><font size = "1"><?=$tr_tb_pe?>:</font> <?=number_format($table_row["pending_credits"],0,$dec_point,$thousands_sep) ?></div>
 <?php endif; ?>
 <?php endif; ?>
 						</div>
