@@ -9,6 +9,7 @@ Version 5.1.2: (noch nicht veröffentlicht)
   Ebenso wird der Abruf der Pending Credits beim gesetztem "false" nun unterbunden.
   Das Unterbinden dieses Abrufs gilt bislang noch NICHT FÜR DIE cronjob.php
 - Es können nun auch die Badges der eigenen CPID von FreeDC angezeigt werden, sofern die cpid in der Tabelle "boinc_user" eingetragen und die Option aktiviert ist.
+- Ein Link zur Projekt-Homepage wurde aus der Übersichts-Tabelle entfernt und ist nun nur noch über die Projekt-Detail-Ansicht verfügbar.
 
 geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
   - ../changelog.txt
